Updated index + aboutme
Updated index page with some contact info and also a Spotify embed with a script running to change the album ID every week. Also added an aboutme page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="mystyle.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>frasermccormick.com was taken</title>
+    <style>
+        iframe {
+            border-radius: 12px;
+            width: 50%;
+            height: 176px;
+            border: none;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<h1>resarf.me</h1>
+<p > My Github Pages site [UNDER CONSTRUCTION- DO NOT JUDGE ME PLS] </p>
+<h2><u>Album of the week (Auto-updates every Monday):</u></h2>
+    <link rel="stylesheet" href="mystyle.css">
+<iframe id="album-iframe" src="" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+<script src="albums.js"></script> <!--Script which changes the album ID in Spotify embed weekly-->
+
+<h2> <a href="aboutme.html"> About me </a> </h2>
+<footer> <p style="margin-left: 300;"> Contact me:</p> <p> <img src="discord.png" width="3%" height="3%"> <b>@fr_ser </b> <br> 
+<img src="instagram.webp"  width = "3%" height = "3%"  > @fr_sermc   <br></p>
+</p></footer>
 </html>
