--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 
 <h2> <a href="aboutme.html"> About me </a> </h2>
 <footer> <p style="margin-left: 300;"> Contact me:</p> <p> <img src="discord.png" width="3%" height="3%"> <b>@fr_ser </b> <br> 
-<img src="instagram.webp"  width = "3%" height = "3%"  > @fr_sermc   <br></p>
+<img src="instagram.webp"  width = "3%" height = "3%"  > <b>@fr_sermc</b>   <br></p>
 </p></footer>
 </html>
