--- a/aboutme.html
+++ b/aboutme.html
@@ -44,11 +44,11 @@
 <h1>resarf.me</h1>
 <h2 style="text-align: center; font-size: x-large;"> About ME</h2>
 <br>
-<p style="text-align: center;"><img src="meplaceholder.png" width="25%" height="25%"> </p>
+<p style="text-align: center;"><img src="meplaceholder.png" width="30%" height="30%"> </p>
 <p style ="text-align: center;">When I feel like it this page will be updated with a small biography about myself. Maybe that says all you need to know about me?</p>
 <br> <br>
 <h2 style="text-align: center; font-size: large"> <u>Character References </u> </h2>
-<p style="text-align: center;"> "yeah he's alright" - Abraham Lincoln <br> <br> <br> "I've had worse!" - God <br> I think sometimes in the life I'm too competitive - <img src="getout.jpeg" width="3%" height = "3%"></p>
- <p style="text-align: center; font-size: x-small;" >  Feel free to send me a quote for this section and have your words immortalised on the web* (by immortal I mean until my free github education runs out))</p><br>
+<p style="text-align: center;"> "yeah he's alright" - Abraham Lincoln <br> <br> <br> <br> "I've had worse!" - God <br> <br> <br><br> "I think sometimes in the life I'm too competitive" - <img src="getout.jpeg" width="9%" height = "9%"></p>
+ <p style="text-align: center; font-size: x-small;" >  Feel free to send me a quote for this section and have your words immortalised on the web* (by immortal I mean until my free github education runs out)</p><br>
 <footer><h2> <a href="index.html"> back </a></h2> </footer>
 </html>
